@@ -1,5 +1,6 @@
 lingtypology 1.1.10
 - remove `ggplot2` dependencies
+- add startup message with the Glottolog version
 
 lingtypology 1.1.9
 - fix colors in `map.features()`
